add: 为伪装选择添加预览显示