@@ -5,10 +5,16 @@ import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import me.shedaniel.math.Color;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
+import net.minecraft.client.gui.ScreenPos;
+import net.minecraft.client.gui.ScreenRect;
+import net.minecraft.client.gui.navigation.NavigationAxis;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.render.RenderLayer;
+import net.minecraft.client.util.math.Vector2f;
 import net.minecraft.text.Text;
 import net.minecraft.util.Formatting;
+import net.minecraft.util.Identifier;
+import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import xyz.nifeather.morph.client.ClientMorphManager;
@@ -18,11 +24,10 @@ import xyz.nifeather.morph.client.ServerHandler;
 import xyz.nifeather.morph.client.graphics.*;
 import xyz.nifeather.morph.client.graphics.container.Container;
 import xyz.nifeather.morph.client.graphics.transforms.Recorder;
-import xyz.nifeather.morph.client.graphics.transforms.Transformer;
-import xyz.nifeather.morph.client.graphics.transforms.easings.Easing;
 import xyz.nifeather.morph.client.screens.FeatherScreen;
 import xyz.nifeather.morph.client.screens.WaitingForServerScreen;
 import xiamomc.pluginbase.Bindables.Bindable;
+import xyz.nifeather.morph.client.screens.disguise.preview.DisguisePreviewDisplay;
 
 import java.util.List;
 
@@ -46,7 +51,7 @@ public class DisguiseScreen extends FeatherScreen
             morphClient.schedule(() ->
             {
                 var availableMorphs = manager.getAvailableMorphs();
-                c.forEach(s -> list.children().add(availableMorphs.indexOf(s) + 1, new EntityDisplayEntry(s)));
+                c.forEach(s -> disguiseList.children().add(availableMorphs.indexOf(s) + 1, new EntityDisplayEntry(s)));
             });
 
             return true;
@@ -57,13 +62,16 @@ public class DisguiseScreen extends FeatherScreen
             if (!this.isCurrent()) return false;
 
             morphClient.schedule(() ->
-                    c.forEach(s -> list.children().removeIf(w -> w.getIdentifierString().equals(s))));
+                    c.forEach(s -> disguiseList.children().removeIf(w -> w.getIdentifierString().equals(s))));
 
             return true;
         });
 
         this.selectedIdentifier.bindTo(manager.selectedIdentifier);
-        this.selectedIdentifier.set(manager.currentIdentifier.get());
+        this.selectedIdentifier.onValueChanged((o, n) ->
+        {
+            this.refreshEntityPreview(n);
+        }, true);
 
         this.serverReady.bindTo(serverHandler.serverReady);
 
@@ -97,6 +105,7 @@ public class DisguiseScreen extends FeatherScreen
                     display == null ? Text.translatable("gui.none") : display);
 
             selectedIdentifierText.setText(text);
+            refreshEntityPreview(n);
         }, true);
 
         serverAPIText.setColor(0x99ffffff);
@@ -105,16 +114,11 @@ public class DisguiseScreen extends FeatherScreen
         titleText.setHeight(20);
 
         //初始化按钮
-        closeButton = this.buildButtonWidget(0, 0, 150, 20, Text.translatable("gui.back"), (button) ->
+        closeButton = this.buildButtonWidget(0, 0, 112, 20, Text.translatable("gui.back"), (button) ->
         {
             this.close();
         });
-/*
-        quickDisguiseButton = this.buildButtonWidget(0, 0, 20, 20, Text.literal("Q"), (button) ->
-        {
-            this.push(new QuickDisguiseScreen());
-        });
-*/
+
         configMenuButton = this.buildButtonWidget(0, 0, 20, 20, Text.literal("C"), (button ->
         {
             var screen = morphClient.getFactory(this).build();
@@ -133,9 +137,40 @@ public class DisguiseScreen extends FeatherScreen
         selfVisibleToggle = new ToggleSelfButton(0, 0, 20, 20, manager.selfVisibleEnabled.get(), this);
     }
 
-    private final Bindable<String> selectedIdentifier = new Bindable<>();
-    private final Bindable<Boolean> serverReady = new Bindable<>();
-    private final Bindable<String> currentIdentifier = new Bindable<>();
+    @Nullable
+    private EntityDisplay playerDisplay;
+
+    private void refreshEntityPreview(String newId)
+    {
+        String identifier = newId == null
+                            ? this.currentIdentifier.get() == null
+                                ? MorphClient.UNMORPH_STIRNG
+                                : this.currentIdentifier.get()
+                            : newId;
+
+        if (playerDisplay != null)
+        {
+            this.remove(playerDisplay);
+            playerDisplay.dispose();
+            playerDisplay = null;
+        }
+
+        var newDisplay = new DisguisePreviewDisplay(identifier, true, EntityDisplay.InitialSetupMethod.SYNC);
+        newDisplay.setMasking(true);
+
+        newDisplay.setParentScreenSpace(new ScreenRect(ScreenPos.of(NavigationAxis.HORIZONTAL, 0, 0), this.width, this.height));
+        newDisplay.setRelativeSizeAxes(Axes.Both);
+        newDisplay.setAnchor(Anchor.CentreRight);
+        newDisplay.setSize(new Vector2f(0.4f, 0.7f));
+
+        playerDisplay = newDisplay;
+
+        this.add(newDisplay);
+    }
+
+    private final Bindable<String> selectedIdentifier = new Bindable<>(MorphClient.UNMORPH_STIRNG);
+    private final Bindable<Boolean> serverReady = new Bindable<>(false);
+    private final Bindable<String> currentIdentifier = new Bindable<>(MorphClient.UNMORPH_STIRNG);
 
     private final MButtonWidget closeButton;
     private final MTextBoxWidget textBox;
@@ -150,7 +185,7 @@ public class DisguiseScreen extends FeatherScreen
     private final Container topTextContainer = new Container();
     private final Container bottomTextContainer = new Container();
 
-    private final DisguiseList list = new DisguiseList(MinecraftClient.getInstance(), 200, 0, 20, 0, 22);
+    private final DisguiseList disguiseList = new DisguiseList(MinecraftClient.getInstance(), 200, 0, 20, 0, 22);
     private final DrawableText titleText = new DrawableText(Text.translatable("gui.morphclient.select_disguise"));
     private final DrawableText selectedIdentifierText = new DrawableText();
     private final DrawableText serverAPIText = new DrawableText();
@@ -167,13 +202,13 @@ public class DisguiseScreen extends FeatherScreen
         {
             if (fullList != null)
             {
-                list.clearChildren(false);
-                list.children().addAll(fullList);
+                disguiseList.clearChildren(false);
+                disguiseList.children().addAll(fullList);
                 fullList = null;
             }
 
             //workaround: Bindable在界面关闭后还是会保持引用，得手动把字段设置为null
-            list.clearChildren();
+            disguiseList.clearChildren();
 
             this.serverReady.unBindFromTarget();
             this.selectedIdentifier.unBindFromTarget();
@@ -195,14 +230,13 @@ public class DisguiseScreen extends FeatherScreen
     {
         super.onScreenEnter(last);
 
-        list.setWidth(width);
-        list.setHeight(this.height - 25);
+        resizeDisguiseList();
 
         if (last == null || last instanceof WaitingForServerScreen)
         {
-            list.children().add(new EntityDisplayEntry(MorphClient.UNMORPH_STIRNG));
+            disguiseList.addChild(new EntityDisplayEntry(MorphClient.UNMORPH_STIRNG));
 
-            manager.getAvailableMorphs().forEach(s -> list.children().add(new EntityDisplayEntry(s)));
+            manager.getAvailableMorphs().forEach(s -> disguiseList.addChild(new EntityDisplayEntry(s)));
 
             //第一次打开时滚动到当前伪装
             scrollToCurrentOrLast(false);
@@ -211,26 +245,22 @@ public class DisguiseScreen extends FeatherScreen
         if (last instanceof WaitingForServerScreen waitingForServerScreen)
             backgroundDim.set(waitingForServerScreen.getCurrentDim());
 
-        var duration = 450; //MorphClient.getInstance().getModConfigData().duration;
-        var easing = Easing.OutQuint; //MorphClient.getInstance().getModConfigData().easing;
+        //var duration = 450; //MorphClient.getInstance().getModConfigData().duration;
+        //var easing = Easing.OutQuint; //MorphClient.getInstance().getModConfigData().easing;
 
-        topHeight.onValueChanged((o, n) ->
-        {
-            list.setY(n);
-            list.setHeaderHeight(textRenderer.fontHeight * 2 + fontMargin * 2 - n);
-        }, true);
+        int headerTargetHeight = textRenderer.fontHeight * 2 + fontMargin * 2;
+        int footerTargetHeight = 30;
 
-        bottomHeight.onValueChanged((o, n) ->
-        {
-            list.setHeight(this.height - topHeight.get() - n);
-        });
+        topHeight.set(headerTargetHeight);
+        bottomHeight.set(30);
+        backgroundDim.set(0.3f);
 
-        Transformer.transform(topHeight, textRenderer.fontHeight * 2 + fontMargin * 2, duration, easing);
-        Transformer.transform(bottomHeight, 30, duration, easing);
-        Transformer.transform(backgroundDim, 0.3f, duration, easing);
+        //Transformer.transform(topHeight, headerTargetHeight, duration, easing);
+        //Transformer.transform(bottomHeight, footerTargetHeight, duration, easing);
+        //Transformer.transform(backgroundDim, 0.3f, duration, easing);
 
         topTextContainer.addRange(titleText, selectedIdentifierText);
-        topTextContainer.setY(-40);
+        //topTextContainer.setY(-40);
         topTextContainer.setPadding(new Margin(0, 0, fontMargin - 1, 0));
 
         if (!MorphClient.getInstance().serverHandler.serverApiMatch())
@@ -238,12 +268,12 @@ public class DisguiseScreen extends FeatherScreen
 
         bottomTextContainer.add(serverAPIText);
         bottomTextContainer.setAnchor(Anchor.BottomLeft);
-        bottomTextContainer.setY(40);
+        //bottomTextContainer.setY(40);
         bottomTextContainer.setPadding(new Margin(0, 0, fontMargin + 1, 0));
 
         // Apply transforms
-        topTextContainer.moveToY(0, duration, easing);
-        bottomTextContainer.moveToY(0, duration, easing);
+        //topTextContainer.moveToY(0, duration, easing);
+        //bottomTextContainer.moveToY(0, duration, easing);
 
         var fontHeight = textRenderer.fontHeight;
         serverAPIText.setMargin(new Margin(0, 0, fontHeight + 2, 0));
@@ -255,7 +285,7 @@ public class DisguiseScreen extends FeatherScreen
 
         this.addRange(new IMDrawable[]
         {
-            list,
+            disguiseList,
             topTextContainer,
             bottomTextContainer,
             closeButton,
@@ -272,7 +302,18 @@ public class DisguiseScreen extends FeatherScreen
         topTextContainer.setX(screenX);
         bottomTextContainer.setX(screenX);
 
-        serverAPIText.setText("Client " + serverHandler.getImplmentingApiVersion() + " :: " + "Server " + serverHandler.getServerVersion());
+        serverAPIText.setText("C %s :: S %s".formatted(serverHandler.getImplmentingApiVersion(), serverHandler.getServerApiVersion()));
+    }
+
+    private void resizeDisguiseList()
+    {
+        int headerTargetHeight = textRenderer.fontHeight * 2 + fontMargin * 2;
+        int footerTargetHeight = 30;
+
+        int disguiseListWidth = Math.round(this.width * 0.6f);
+        disguiseList.setWidth(disguiseListWidth);
+        disguiseList.setHeight(this.height - headerTargetHeight - footerTargetHeight);
+        disguiseList.setY(headerTargetHeight);
     }
 
     @Override
@@ -281,8 +322,7 @@ public class DisguiseScreen extends FeatherScreen
         assert this.client != null;
 
         //列表
-        list.setWidth(width);
-        list.setHeight(this.height - topHeight.get() - bottomHeight.get());
+        resizeDisguiseList();
 
         bottomTextContainer.invalidatePosition();
         topTextContainer.invalidatePosition();
@@ -300,18 +340,18 @@ public class DisguiseScreen extends FeatherScreen
 
     private void scrollToCurrentOrLast(boolean scrollToLastIfNoCurrent)
     {
-        var filter = list.children();
+        var filter = disguiseList.children();
 
         var current = manager.currentIdentifier.get();
 
         if (current != null)
         {
-            var widget = list.children().stream()
+            var widget = disguiseList.children().stream()
                     .filter(w -> current.equals(w.getIdentifierString())).findFirst().orElse(null);
 
             if (widget != null)
             {
-                list.scrollTo(widget);
+                disguiseList.scrollTo(widget);
 
                 return;
             }
@@ -320,21 +360,22 @@ public class DisguiseScreen extends FeatherScreen
         if (!scrollToLastIfNoCurrent) return;
 
         EntityDisplayEntry last = null;
-        if (filter.size() >= 1)
-            last = filter.get(filter.size() - 1);
+        if (!filter.isEmpty())
+            last = filter.getLast();
 
         if (last != null)
-            list.scrollTo(last);
+            disguiseList.scrollTo(last);
     }
 
+    //todo: Refactor this to use another list instance.
     private void applySearch(String str)
     {
         if (str.isEmpty())
         {
             if (fullList != null)
             {
-                list.clearChildren(false);
-                list.children().addAll(fullList);
+                disguiseList.clearChildren(false);
+                disguiseList.addChildrenRange(fullList);
 
                 fullList = null;
             }
@@ -343,7 +384,7 @@ public class DisguiseScreen extends FeatherScreen
         }
 
         if (fullList == null)
-            this.fullList = new ObjectArrayList<>(list.children());
+            this.fullList = new ObjectArrayList<>(disguiseList.children());
 
         //搜索id和已加载伪装的实体名称
         var finalStr = str.toLowerCase().trim();
@@ -352,10 +393,10 @@ public class DisguiseScreen extends FeatherScreen
                                 || w.getEntityName().contains(finalStr))
                 .toList();
 
-        list.clearChildren(false);
-        list.children().addAll(filter);
+        disguiseList.clearChildren(false);
+        disguiseList.addChildrenRange(filter);
 
-        if (list.getScrollY() > list.getMaxScrollY())
+        if (disguiseList.getScrollY() > disguiseList.getMaxScrollY())
             scrollToCurrentOrLast(true);
     }
 
@@ -395,6 +436,21 @@ public class DisguiseScreen extends FeatherScreen
         context.fillGradient(0, 0, this.width, this.height, color.getColor(), color.getColor());
 
         super.render(context, mouseX, mouseY, delta);
+
+        // Separator
+        Identifier identifierHeader = Screen.INWORLD_HEADER_SEPARATOR_TEXTURE;
+        Identifier identifierFooter = Screen.INWORLD_FOOTER_SEPARATOR_TEXTURE;
+        context.drawTexture(RenderLayer::getGuiTextured, identifierHeader,
+                0, this.topHeight.get() - 2,
+                0, 0,
+                this.width, 2,
+                32, 2);
+
+        context.drawTexture(RenderLayer::getGuiTextured, identifierFooter,
+                0, this.height - bottomHeight.get(),
+                0, 0,
+                this.width, 2,
+                32, 2);
     }
 
     @Override
@@ -402,9 +458,10 @@ public class DisguiseScreen extends FeatherScreen
     {
         super.renderBackground(context, mouseX, mouseY, delta);
 
-        RenderSystem.setShaderColor(0.2F, 0.2F, 0.2F, 1.0F);
-
         RenderSystem.enableBlend();
+
+        context.fill(0, 0, this.width, this.height, Color.ofRGBA(0, 0, 0, 0.3f).getColor());
+
         context.drawTexture(RenderLayer::getGuiTextured, Screen.MENU_BACKGROUND_TEXTURE,
                 0, 0,
                 0, -topHeight.get(),
@@ -414,8 +471,6 @@ public class DisguiseScreen extends FeatherScreen
                 0, this.height - bottomHeight.get(),
                 0, 0,
                 this.width, this.height, 32, 32);
-
-        RenderSystem.setShaderColor(1F, 1F, 1F, 1F);
     }
 
     @Override
